# vulkan

./: .gitignore  CMakeLists.txt  CMakePresets.json  deps.cmake
include/: config.in.h  fs.h  scene.h
include/vkw/: Allocator.h  Device.h  Render.h  Vkresource.h  render.h  vkw.h
lib/: CMakeLists.txt
shaders/: box.frag.glsl  box.vert.glsl  duck.frag.glsl  duck.vert.glsl  tri.frag.glsl  tri.vert.glsl
src/: fs.cpp  main.cpp  mipmapper.cpp  scene.cpp
src/vkw/: Allocator.cpp  CommandBuffer.cpp  Device.cpp  Render.cpp  Vkresource.cpp  render.cpp
